# PCNN

./: .gitignore  8_best_pcnn_bpc.json  README.md  evolution_toy.py  foo.py  lab_evolution.ipynb  lab_pcnn.ipynb  lab_pcnn_2.ipynb  lab_pcnn_nav.ipynb  lab_pcnn_nonhot_1.ipynb  main.py  mod_evolution.py  mod_models.py  mod_stimulation.py  mod_visualization.py  models.py  pcnn_lab.ipynb  requirements.txt  sim_1.py  sim_2.py  sim_3.py  sim_4.py  sim_5.py  sim_evo_I.py
.ipynb_checkpoints/: lab_pcnn-checkpoint.ipynb  lab_pcnn_2-checkpoint.ipynb  lab_pcnn_nonhot_1-checkpoint.ipynb  pcnn_lab-checkpoint.ipynb
cache/: 10_best_pcnn_bpc.json  11_best_hl.json  11_best_pcnn_bpc.json  12_best_hl.json  12_best_pcnn_g.json  13_best_pcnn_g.json  14_best_pcnn_g.json  15_best_pcnn_g.json  16_best_pcnn_g.json  17_best_pcnn_g.json  18_best_pcnn_h.json  19_best_pcnn_h.json  20_best_pcnn_h.json  21_best_pcnn_h.json  22_best_pcnn_h.json  23_best_pcnn_h.json  24_best_pcnn_bpc.json  25_best_pcnn_bpc.json  26_best_pcnn_bpc.json  27_best_pcnn_bpc.json  (+114 more)
src/core/: CMakeLists.txt  README.md  _previous.py  envs_core.py  evolution.py  maindash.py  mod_core.py  pcnn_core.py  pygame_envs.py  run_core.py  scratch.py  utils_core.py
src/core/_old_code/: _pcnn_core.py  _previous.py  libwrap.py
src/core/archive/: _past_pcnn.hpp  test.cpp
src/core/cache/: 1_best_pcore.json  2_best_pcore.json  3_best_pcore.json  4_best_pcore.json  5_best_pcore.json  6_best_pcore.json  7_best_pcore.json
src/core/dashboard/: index.html  script.js  styles.css  test.py
src/core/dashboard/cache/: configs.json
src/core/dashboard/media/: configs.json
src/core/include/: binding.cpp  former_utils.hpp  notes.md  pcnn.cpp  pcnn.hpp  scratch.py  utils.cpp  utils.hpp
src/core/include/ignore/: _past_binding.cpp  utils.cpp  utils.hpp
src/core/src/: binding.cpp  previous.cpp  test.cpp
src/core/test/: scratch2.py
src/core/testlib/: test1.py
src/core/tests/: mod_test.py
src/core/tmp/: cmake_for_linux.txt  cmake_for_macos.txt
(+503 files in other folders)
